per-state aggregation admin api
